--- a/Cucumber-JVM/pom.xml
+++ b/Cucumber-JVM/pom.xml
@@ -39,6 +39,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Required for java8 lambda methods -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java8</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit-platform-engine</artifactId>
