--- a/Cucumber-JVM/pom.xml
+++ b/Cucumber-JVM/pom.xml
@@ -46,6 +46,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Required for guice injection -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-guice</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit-platform-engine</artifactId>
