Add Spring Cloud profile config

--- a/SpringCloud/spring-cloud-config-intro/greet-service/src/main/resources/application.properties
+++ b/SpringCloud/spring-cloud-config-intro/greet-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=greet-service
 spring.config.import=optional:configserver:http://localhost:8888
 
+spring.profiles.active=dev
+# spring.cloud.config.profile=dev
 # Note: welcome.message doesn't bind automatically
 # Details: https://docs.spring.io/spring-boot/docs/2.1.13.RELEASE/reference/html/boot-features-external-config.html
 greet-service.welcome-message=Welcome from greet-service
