Update Spring Boot ActiveMQ reference

--- a/SpringBoot/spring-boot-activemq/src/main/resources/application.properties
+++ b/SpringBoot/spring-boot-activemq/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+# json-message | java-message 
+spring.profiles.active=java-message
+
 active-mq.broker-url=tcp://localhost:61616
-active-mq.topic=test-topic
+active-mq.queue=test-queue
 
 logging.level.org.springframework.web=DEBUG
