--- a/SpringBoot/spring-boot-activemq/pom.xml
+++ b/SpringBoot/spring-boot-activemq/pom.xml
@@ -25,6 +25,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- Spring BOM selected version 5.13.4 which expects javax.jms.* 
+			 Latests Spring Boot expects jakarta.jms.* namespace
+		-->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-broker</artifactId>
+			<version>6.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
